rearranged divs properly

--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@
                 <h2>Bhaskaran Pillai</h2>
                 <h3>Managing Director<br>Bhaskaran Pillai Technologies Ltd.</h3>
             </div>
-            <div class="mid-div">
-                <div class="sub-div-mid">
+            <div class="sub-div-mid">
+                <div class="ceo">
                     <img src="./images/Thankappan.jpg" alt="#">
                     <h2>Thankappan</h2>
                     <h3>CEO</h3>
                 </div>
-                <div class="sub-div-mid">
-                    <aside class="hr-sec">
-                        <img src="./images/Elizabath.jpg" alt="#">
-                        <h2>Elizabath</h2>
-                        <h3>HR Manager</h3>
-                    </aside>
+                <div class="hr">
+                    <img src="./images/Elizabath.jpg" alt="#">
+                    <h2>Elizabath</h2>
+                    <h3>HR Manager</h3>
                 </div>
             </div>
             <div class="sub-div-bottom">
