UI change and responsiveness

--- a/index.html
+++ b/index.html
@@ -52,33 +52,44 @@
                 </div>
             </div>
             <div class="sub-div-bottom">
-                <div class="emp1">
-                    <img src="./images/Ameya.jpg" alt="#">
-                    <h3>Ameya</h3>
+                <div class="mob-device-top">
+                    <div class="emp1">
+                        <img src="./images/Ameya.jpg" alt="#">
+                        <h3>Ameya</h3>
+                        <h4>Software Tester</h4>
+                    </div>
+                    <div class="emp2">
+                        <img src="./images/Govind.jpg" alt="#">
+                        <h3>Govind</h3>
+                        <h4>Software Developer</h4>
+                    </div>
+                    <div class="emp3">
+                        <img src="./images/Likesh kurup.jpg" alt="#">
+                        <h3>Likesh</h3>
+                        <h4>Software Developer</h4>
+                    </div>
+                    <div class="emp4">
+                        <img src="./images/Naveen.jpg" alt="#">
+                        <h3>Naveen</h3>
+                        <h4>Software Architect</h4>
+                    </div>
                 </div>
-                <div class="emp2">
-                    <img src="./images/Govind.jpg" alt="#">
-                    <h3>Govind</h3>
-                </div>
-                <div class="emp3">
-                    <img src="./images/Likesh kurup.jpg" alt="#">
-                    <h3>Likesh</h3>
-                </div>
-                <div class="emp4">
-                    <img src="./images/Naveen.jpg" alt="#">
-                    <h3>Naveen</h3>
-                </div>
-                <div class="emp5">
-                    <img src="./images/Sabith.jpg" alt="#">
-                    <h3>Sabith</h3>
-                </div>
-                <div class="emp6">
-                    <img src="./images/Vipin.jpg" alt="#">
-                    <h3>Vipin</h3>
-                </div>
-                <div class="emp7">
-                    <img src="./images/Vivek.jpg" alt="#">
-                    <h3>Vivek</h3>
+                <div class="mob-device-bottom">
+                    <div class="emp5">
+                        <img src="./images/Sabith.jpg" alt="#">
+                        <h3>Sabith</h3>
+                        <h4>Software Tester</h4>
+                    </div>
+                    <div class="emp6">
+                        <img src="./images/Vipin.jpg" alt="#">
+                        <h3>Vipin</h3>
+                        <h4>Business Analyst</h4>
+                    </div>
+                    <div class="emp7">
+                        <img src="./images/Vivek.jpg" alt="#">
+                        <h3>Vivek</h3>
+                        <h4>System Admin</h4>
+                    </div>
                 </div>
             </div>
       </div>
