--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     </div>
                 </div>
             </div>
+            <div class="footer">
+                <h3>Site developed and hosted by&nbsp;<a href="https://www.instagram.com/s.r.e.y.a.s_/">sreyas</a></h3>
+            </div>
       </div>
     </section>
     
