Developer Handle Change

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="footer">
-                <h3>Site developed and hosted by&nbsp;<a href="https://www.instagram.com/s.r.e.y.a.s_/">sreyas</a></h3>
+                <h3>Site developed and hosted by&nbsp;<a href="https://www.instagram.com/sre.yax/">sreyas</a></h3>
             </div>
       </div>
     </section>
